--- a/br.pi.senac.cursopoo/nbproject/private/private.properties
+++ b/br.pi.senac.cursopoo/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Carlos Henrique\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\Administrador\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
